[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywhiten"
version = "1.1.0"
authors = [
  { name="Erik Stacey", email="erik@erikstacey.com" },
]
description = "A python package for conducting Lomb-Scargle based prewhitening of stellar time series. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "tomli",
    "scipy",
    "lmfit"
]

[project.urls]
"Homepage" = "https://github.com/erikstacey/pywhiten"
"Bug Tracker" = "https://github.com/erikstacey/pywhiten/issues"
"Documentation" = "https://readthedocs.org/projects/pywhiten/"